# django_package_template

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  question.yaml
.github/workflows/: bandit.yaml  black.yaml  coveralls.yaml  isort.yaml  mypy.yaml  pypi.yaml  ruff.yaml
docs/source/: internals.rst
tests/core/: settings.py
