[metadata]
author = DjangoAddicts
author_email = 
name = 
description = 
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/djangoaddicts/
license = GNU GENERAL PUBLIC LICENSE
platform = any

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src

install_requires =
    django

setup_requires =
    pytest-runner
    setuptools_scm
    wheel

[options.extras_require]
dev =
    bandit
    black
    build
    mypy
    mypy-extensions
    pylint
    pytest
    pytest-cov
    pytest-django
    types-python-dateutil
    typing_extensions

doc = 
    Sphinx
    sphinx-rtd-theme

[options.packages.find]
where = src

exclude =
    __pycache__
    *.pyc
    test

[bdist_wheel]
universal = 1
